# acsai

./: environment.yaml  requirements.txt
AI Lab/: pyproject.toml  req.txt  requirements.txt
AI Lab/Class practice/: billboard_ex.ipynb  filters.ipynb  geometric_manipulation.ipynb  histograms.ipynb  histrogram.ipynb  jupyter_intro.ipynb  numpy_intro.ipynb  opencv_intro.ipynb  panorama.ipynb  tools_intro.ipynb
AI Lab/Computer Vision/Class practice/: billboard_ex.ipynb  filters.ipynb  geometric_manipulation.ipynb  opencv_intro.ipynb
AI Lab/Computer Vision/Homework/Object recognition/: recognition.ipynb
AI Lab/Homework/Object recognition/: recognition.ipynb
AI Lab/Machine Learning/: classification.ipynb  cnn.ipynb  colour_clustering.ipynb  deep_learning.ipynb  features.ipynb  intro.ipynb  mlp_pytorch_mnist.ipynb  svm.ipynb  text_data.ipynb
AI Lab/Natural Language Processing/Class Practice/: nlpk_introduction.ipynb
Artificial Intelligence/: 004.ipynb  coding_simulation_exam.ipynb  ex_17_8.ipynb  game_algorithms.ipynb  markov_decision_process.ipynb  minimax.ipynb  pyproject.toml  reinforcement_learning.ipynb  search_algorithms.ipynb  search_exercises.ipynb  test.ipynb  uninformed_search.ipynb
Deep Learning/: pyproject.toml
Deep Learning/Class/: pyproject.toml
Deep Learning/Class/Exercises/: 00_ndarray.ipynb  03_linear-regression-scratch.ipynb  04_weight-decay.ipynb  06_mlp-implementation.ipynb  07_conv-layer.ipynb  10_batch-norm.ipynb  14_rnn.ipynb  17_encoder-decoder.ipynb  18_seq2seq.ipynb  21_bahdanau-attention.ipynb  25_vision-transformer.ipynb  26_gan.ipynb  alexnet.ipynb  autograd.ipynb  conv-layer.ipynb  linear-regression-scratch.ipynb  lookup-api.ipynb  lr_scratch_ex.ipynb  mlp-implementation.ipynb  ndarray.ipynb  weight-decay.ipynb
Deep Learning/Class/Exercises/mlp_fromscratch/: mlp_scratch_ex.ipynb
Deep Learning/Dive into Deep Learning/: d2l.py  pyproject.toml
Deep Learning/Dive into Deep Learning/Code/: builders_guide.ipynb  cnn.ipynb  lnn_4_classification.ipynb  lnn_4_regression.ipynb  mlp.params  modern_cnn.ipynb  multilayer_perceptrons.ipynb  mydict  rnn.ipynb  submission.csv  transformers.ipynb  x-file  x-files
Deep Learning/Dive into Deep Learning/Notebooks/jax/: index.ipynb
Deep Learning/Dive into Deep Learning/Notebooks/jax/chapter_appendix-mathematics-for-deep-learning/: index.ipynb
Deep Learning/Dive into Deep Learning/Notebooks/jax/chapter_appendix-tools-for-deep-learning/: aws.ipynb  colab.ipynb  contributing.ipynb  d2l.ipynb  index.ipynb  jupyter.ipynb  sagemaker.ipynb  selecting-servers-gpus.ipynb  utils.ipynb
Deep Learning/Dive into Deep Learning/Notebooks/mxnet/: index.ipynb
Deep Learning/Dive into Deep Learning/Notebooks/pytorch/: index.ipynb
Deep Learning/Dive into Deep Learning/Notebooks/tensorflow/: index.ipynb
Deep Learning/EBMs/: ebm_example.ipynb  pyproject.toml
Deep Learning/Lab 11-28 Nov-20250114T100841Z-001/Lab 11-28 Nov/Attention mechanism and transformers/: attention-scoring-functions.ipynb  multihead-attention.ipynb  queries-keys-values.ipynb  self-attention-and-positional-encoding.ipynb  transformer.ipynb
Deep Learning/Lab 11-28 Nov-20250114T100841Z-001/Lab 11-28 Nov/Recurrent-modern/: lstm.ipynb  machine-translation-and-dataset.ipynb  seq2seq.ipynb
Machine Learning/: pyproject.toml
Machine Learning/Class Notes/Calculus recap/: calculus_recap.ipynb
Machine Learning/Class Notes/Eigenvalues and PCA/: eigenvalues_pca.ipynb
Machine Learning/Class Notes/Gaussian PDF/: 06_clustering_gaussian_MLE.ipynb
Machine Learning/Class Notes/Gaussian PDF/.ipynb_checkpoints/: 06_clustering_gaussian_MLE-checkpoint.ipynb
Machine Learning/Class Notes/Gaussian mixture models/: 07_clustering_GMM.ipynb
Machine Learning/Class Notes/Introduction/: 01_introduction.ipynb
Machine Learning/Class Notes/Linear Algebra recap/: Linear Algebra recap.ipynb
Machine Learning/Math practice/: MML3.ipynb  MML4.ipynb
Scientific Computing/: 00_ode_intro.ipynb  01_euler_methods.ipynb  install.sh  pyproject.toml
Scientific Computing/Theory/: 02_poisson_FD.ipynb  03_FEM_with_FEniCS.ipynb  03_poisson_FEM.ipynb  04_FEM_with_FEniCS.ipynb  poisson_FEM.ipynb
(+819 files in other folders)
