[tool.poetry]
package-mode = false
name = "ai lab"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-contrib-python = "^4.9.0.80"
matplotlib = "^3.8.3"
ipykernel = "^6.29.3"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
