[tool.poetry]
name = "artificial intelligence"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
time-python = "^0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
