[tool.poetry]
name = "scientific computing"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
