[tool.poetry]
name = "dlcourse"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"
package-mode = false
[tool.poetry.dependencies]
python = "3.11.*"
d2l = "^1.0.3"
torch = "^2.4.1"
torchvision = "^0.19.1"
numpy = "1.23.5"
torchmetrics = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
