[tool.poetry]
name = "dive into deep learning"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
requests = "^2.31.0"
ipython = "^8.22.2"
matplotlib = "^3.8.3"
torch = "^2.2.2"
torchvision = "^0.17.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
