[tool.poetry]
name = "dive into deep learning"
version = "0.1.0"
description = ""
authors = ["lordPachy <francescocalzona03@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "<3.12, >=3.8"
torch = "^2.2.2"
torchvision = "^0.17.2"
d2l = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
